# deep_learning_from_scratch_Cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  final_presentation.odp
docs/: Doxyfile
headers/: Activation.h  AddNode.h  ComputationalNode.h  Connector.h  Convolution.h  DotProduct.h  Dropout.h  Maxpooling.h  Network.h
libs/share/cmake/hdf5/: hdf5-config.cmake  hdf5-targets-relwithdebinfo.cmake  hdf5-targets.cmake
libs/share/cmake/pybind11/: pybind11ConfigVersion.cmake
libs/share/eigen3/cmake/: Eigen3ConfigVersion.cmake
libs/share/pkgconfig/: catch2.pc  eigen3.pc
src/: Activation.cpp  AddNode.cpp  ComputationalNode.cpp  Connector.cpp  Convolution.cpp  DotProduct.cpp  Dropout.cpp  MalariaDetection.ipynb  Maxpooling.cpp  Network.cpp  main.cpp  malaria_detection.py  setup.py  wrap.cpp
tests/: test_Network.cpp  test_add_node.cpp  test_connector.cpp  test_convolution.cpp  test_dot_product_node.cpp  test_main.cpp  test_maxpooling.cpp  tests_activation_func.cpp  xor_tests.cpp
